Added openslide import for windows

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -40,8 +40,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install openslide-python\n",
-    "#!pip install opencv-python"
+    "!pip install openslide-python\n",
+    "!pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The path can also be read from a config file, etc.\n",
+    "OPENSLIDE_PATH = r'C:\\Users\\sofia\\openslide-win64-20230414\\openslide-win64-20230414\\bin'\n",
+    "\n",
+    "import os\n",
+    "if hasattr(os, 'add_dll_directory'):\n",
+    "    # Python >= 3.8 on Windows\n",
+    "    with os.add_dll_directory(OPENSLIDE_PATH):\n",
+    "        import openslide\n",
+    "else:\n",
+    "    import openslide"
    ]
   },
   {
@@ -51,6 +69,12 @@
    "source": [
     "# Code"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "attachments": {},
@@ -66,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openslide\n",
+    "#import openslide\n",
     "import cv2\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
