--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 2,
       "metadata": {
         "id": "QqZY-5Za8HWo"
       },
@@ -140,6 +140,7 @@
         "import xml.etree.ElementTree as ET\n",
         "from shapely.geometry import Point\n",
         "from shapely.geometry.polygon import Polygon\n",
+        "import tensorflow as tf\n",
         "\n",
         "path_to_image = \"../slides/RECHERCHE-010.svs\"\n",
         "path_to_xml = \"../annotations/RECHERCHE-010.xml\"\n",
@@ -419,6 +420,30 @@
       "source": [
         "np.save('dataset.npy', dataset)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = np.load('dataset.npy')\n",
+        "data.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = tf.keras.Sequential([\n",
+        "  tf.keras.layers.Resizing(output_width//2, output_height//2), \n",
+        "  tf.keras.layers.Rescaling(1./255),\n",
+        "  tf.keras.layers.RandomFlip(\"horizontal_and_vertical\"),\n",
+        "  tf.keras.layers.RandomRotation(0.25),\n",
+        "])"
+      ]
     }
   ],
   "metadata": {
@@ -440,7 +465,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.10.10"
     },
     "orig_nbformat": 4
   },
