--- a/src/unet5.ipynb
+++ b/src/unet5.ipynb
@@ -1,27 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -29,15 +10,18 @@
         "id": "0jq8pDUlVtvX",
         "outputId": "04f9adc4-e9fe-4358-ebc9-89275acdf8d2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -70,15 +54,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Data preprocessing"
-      ],
       "metadata": {
         "id": "MoL-MwT7VXjT"
-      }
+      },
+      "source": [
+        "# Data preprocessing"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "z1N1EopOVejK"
+      },
+      "outputs": [],
       "source": [
         "def data_augment():\n",
         "    return iaa.Sequential([\n",
@@ -95,15 +84,15 @@
         "        # Local distortions of images by moving points around\n",
         "        iaa.PiecewiseAffine(scale=(0.01, 0.1)),\n",
         "    ], random_order=True)"
-      ],
-      "metadata": {
-        "id": "z1N1EopOVejK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "P2QOfZ3OVgvn"
+      },
+      "outputs": [],
       "source": [
         "def process_data(image, label):\n",
         "    return tf.cast(image, tf.float32)/255, tf.one_hot(label, 2, name=\"label\", axis=-1)\n",
@@ -111,15 +100,15 @@
         "#Il one_hot (one hot encoding) è necessario se il modello è compilato con 'loss=\"categorical_crossentropy\"'\n",
         "#Nel nostro caso, vista la classificazione binaria, si può compilare il modello con 'loss=\"binary_crossentropy\"'\n",
         "#Questa NON richiede la one hot encoding!"
-      ],
-      "metadata": {
-        "id": "P2QOfZ3OVgvn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "a1NRZBe4VicN"
+      },
+      "outputs": [],
       "source": [
         "def data_aug_impl(dataset, image_train, label_train):\n",
         "    da = data_augment()\n",
@@ -134,15 +123,15 @@
         "            [label.get_arr() for label in augmented_labels]), axis=0)\n",
         "\n",
         "    return image_train, label_train"
-      ],
-      "metadata": {
-        "id": "a1NRZBe4VicN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I2RRuM8hVkII"
+      },
+      "outputs": [],
       "source": [
         "def generate_train_data_tensor(image_train, label_train):\n",
         "    train_data = tf.data.Dataset.from_tensor_slices((image_train, label_train))\n",
@@ -153,15 +142,15 @@
         "    train_data = train_data.batch(32)\n",
         "    train_data = train_data.prefetch(tf.data.AUTOTUNE)\n",
         "    return train_data"
-      ],
-      "metadata": {
-        "id": "I2RRuM8hVkII"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-_iaDsbuVoZx"
+      },
+      "outputs": [],
       "source": [
         "dataset = np.load(path_to_dataset)[0:10]\n",
         "labels = np.load(path_to_labels)[0:10]\n",
@@ -169,18 +158,11 @@
         "    dataset, labels, test_size=0.25, random_state=42)\n",
         "#image_train, label_train = data_aug_impl(dataset, image_train, label_train)\n",
         "train_data = generate_train_data_tensor(image_train, label_train)"
-      ],
-      "metadata": {
-        "id": "-_iaDsbuVoZx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_data"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -188,31 +170,55 @@
         "id": "N9D5AampXoZM",
         "outputId": "e41c34c8-679d-447e-86f7-3b46a7c44ac8"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 512, 512, 3), dtype=tf.float32, name=None), TensorSpec(shape=(None, 512, 512, 2), dtype=tf.float32, name=None))>"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "train_data"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# U-net5"
-      ],
       "metadata": {
         "id": "wlqc85m0VcYm"
-      }
+      },
+      "source": [
+        "# U-net5"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aSBVGxAQaa9z",
+        "outputId": "357d3527-c248-4056-f28b-0ba7e0c0dbe3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "1/1 [==============================] - 41s 41s/step - loss: 0.5117 - accuracy: 0.9168\n",
+            "Epoch 2/3\n",
+            "1/1 [==============================] - 2s 2s/step - loss: 0.6338 - accuracy: 0.9187\n",
+            "Epoch 3/3\n",
+            "1/1 [==============================] - 2s 2s/step - loss: 0.4667 - accuracy: 0.9187\n"
+          ]
+        }
+      ],
       "source": [
         "class Unet(Model):\n",
         "\n",
@@ -343,50 +349,26 @@
         "unet.compile(optimizer=optimizer,\n",
         "               loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
         "history = unet.fit(train_data, epochs=3)"
-      ],
-      "metadata": {
-        "id": "aSBVGxAQaa9z",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "357d3527-c248-4056-f28b-0ba7e0c0dbe3"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/3\n",
-            "1/1 [==============================] - 41s 41s/step - loss: 0.5117 - accuracy: 0.9168\n",
-            "Epoch 2/3\n",
-            "1/1 [==============================] - 2s 2s/step - loss: 0.6338 - accuracy: 0.9187\n",
-            "Epoch 3/3\n",
-            "1/1 [==============================] - 2s 2s/step - loss: 0.4667 - accuracy: 0.9187\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "optv_15iVU0O"
+      },
+      "outputs": [],
       "source": [
         "unet = Unet()\n",
         "optimizer = tf.keras.optimizers.legacy.SGD(learning_rate=0.01)\n",
         "unet.compile(optimizer=optimizer,\n",
         "               loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
         "history = unet.fit(train_data, epochs=3)"
-      ],
-      "metadata": {
-        "id": "optv_15iVU0O"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "history = unet.fit(train_data, epochs=3)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -394,25 +376,43 @@
         "id": "iEB4GbMjd81s",
         "outputId": "4b3e5164-3c20-4d97-e481-9602c6e8ea2b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/3\n"
           ]
         }
+      ],
+      "source": [
+        "history = unet.fit(train_data, epochs=3)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "4l9-1X9veBpp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
