First implementation of isomap

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -1267,12 +1267,20 @@
       "outputs": [],
       "source": [
         "def generate_data_tensor(image_train, label_train, train=True):\n",
-        "    data = tf.data.Dataset.from_tensor_slices((image_train, label_train))\n",
+        "    def generator():\n",
+        "        for img, lbl in zip(image_train, label_train):\n",
+        "            yield img, lbl\n",
+        "\n",
+        "    data = tf.data.Dataset.from_generator(generator,\n",
+        "                                          output_signature=(\n",
+        "                                              tf.TensorSpec(\n",
+        "                                                  shape=(512, 512, 3), dtype=tf.float32),\n",
+        "                                              tf.TensorSpec(shape=(512, 512), dtype=tf.int32)))\n",
         "    data = data.map(\n",
         "        process_data, num_parallel_calls=tf.data.AUTOTUNE)\n",
         "    data = data.cache()\n",
         "    if train:\n",
-        "        data = data.shuffle(100)\n",
+        "        data = data.shuffle(500)\n",
         "    data = data.batch(128)\n",
         "    data = data.prefetch(tf.data.AUTOTUNE)\n",
         "    return data"
@@ -1340,7 +1348,7 @@
         "    # Costruisci il modello\n",
         "    model = SegNet()\n",
         "    # Compila il modello con la funzione di perdita e l'ottimizzatore appropriati\n",
-        "    model.compile(loss=\"cross_entropy\", optimizer=tf.keras.model.Adam(learning_rate), metrics=[\"accuracy\", \"F1Score\", \"Precision\", \"Recall\", \"FalseNegatives\",\n",
+        "    model.compile(loss=\"cross_entropy\", optimizer=tf.keras.optimizers.Adam(learning_rate), metrics=[\"accuracy\", \"F1Score\", \"Precision\", \"Recall\", \"FalseNegatives\",\n",
         "                                                                                               \"FalsePositives\", \"TrueNegatives\", \"TruePositives\",\n",
         "                                                                                               \"cohen_kappa\", \"MatthewsCorrelationCoefficient\"])\n",
         "    # Addestra il modello sul training set\n",
