--- a/src/clustering.ipynb
+++ b/src/clustering.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {
         "id": "uiqcW6JXIqe1"
       },
@@ -531,11 +531,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "features=np.load(\"../dataset/glomeruli_features_autoencoder.npy\")"
+        "features=np.load(\"../dataset/glomeruli_features_vgg19.npy\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(1702, 6, 6, 512)"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "features.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "np.all(~np.isfinite(features)==False)"
       ]
     },
     {
@@ -543,7 +583,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "features[1]"
+      ]
     },
     {
       "cell_type": "code",
