Implemented data bal + bug fixies + new autoencoder approach

--- a/src/trash.ipynb
+++ b/src/trash.ipynb
@@ -958,6 +958,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "ciao\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "flag = False\n",
+        "if flag:\n",
+        "    b=-1\n",
+        "else:\n",
+        "    b=1\n",
+        "a = 0\n",
+        "\n",
+        "if(b > a):\n",
+        "    print(\"ciao\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
